--- a/frontend/groupmembers.html
+++ b/frontend/groupmembers.html
@@ -61,7 +61,7 @@
   <div class="gallery">
     <!-- Example Member -->
     <div class="member-card">
-      <img src="frontend\assets\images\card.jpeg" alt="Member 1">
+      <img src="assets\images\card.jpeg" alt="Member 1">
       <div class="caption">Ranjith</div>
     </div>
 
