--- a/frontend/groupmembers.html
+++ b/frontend/groupmembers.html
@@ -61,8 +61,8 @@
   <div class="gallery">
     <!-- Example Member -->
     <div class="member-card">
-      <img src="assets/images/card.jpeg" alt="Member 1">
-      <div class="caption">Ranjith</div>
+      <img src="assets/images/nandan.jpeg" alt="Member 1">
+      <div class="caption">Nandan</div>
     </div>
 
     <!-- <div class="member-card">
