--- a/frontend/dashboard.html
+++ b/frontend/dashboard.html
@@ -130,6 +130,15 @@
       background: #ef6c00;
     }
 
+    footer {
+      text-align: center;
+      padding: 20px;
+      background: #212121;
+      color: #ffccbc;
+      z-index: 2;
+      position: relative;
+    }
+
     @media (max-width: 768px) {
       .summary-cards, .action-buttons {
         flex-direction: column;
@@ -188,6 +197,10 @@
 
     </section>
   </div>
+
+  <footer>
+    ಕುಂಬಾರ ಬೀದಿ Boys Nandan
+  </footer>
   <script src="language-switcher.js"></script>
  <script>
   const token = localStorage.getItem("token");
