--- a/frontend/groupmembers.html
+++ b/frontend/groupmembers.html
@@ -65,15 +65,25 @@
       <div class="caption">Nandan</div>
     </div>
 
-    <!-- <div class="member-card">
-      <img src="images/members/member2.jpg" alt="Member 2">
-      <div class="caption">Ananya</div>
+    <div class="member-card">
+      <img src="assets/images/yashwanth.jpeg" alt="Member 2">
+      <div class="caption">Yashwanth</div>
     </div>
 
     <div class="member-card">
-      <img src="images/members/member3.jpg" alt="Member 3">
-      <div class="caption">Pranav</div>
-    </div> -->
+      <img src="assets/images/kishore.jpeg" alt="Member 3">
+      <div class="caption">Kishore</div>
+    </div>
+
+    <div class="member-card">
+      <img src="assets/images/abhi.jpeg" alt="Member 3">
+      <div class="caption">Abhi</div>
+    </div>
+
+    <div class="member-card">
+      <img src="assets/images/krishna.jpeg" alt="Member 3">
+      <div class="caption">krishna</div>
+    </div>
 
     <!-- Add more members like above -->
   </div>
