--- a/frontend/dashboard.html
+++ b/frontend/dashboard.html
@@ -199,7 +199,7 @@
   </div>
 
   <footer>
-    ಕುಂಬಾರ ಬೀದಿ Boys Nandan || Yashwanth || Kishore || Abhi || Krishna
+    ಕುಂಬಾರ ಬೀದಿ Boys ❤️ <br> Nandan || Yashwanth || Kishore || Abhi || Krishna
   </footer>
   <script src="language-switcher.js"></script>
  <script>
