--- a/frontend/dashboard.html
+++ b/frontend/dashboard.html
@@ -199,7 +199,7 @@
   </div>
 
   <footer>
-    ಕುಂಬಾರ ಬೀದಿ Boys ❤️ <br> Nandan || Yashwanth || Kishore || Abhi || Krishna
+    ಕುಂಬಾರ ಬೀದಿ Boys ❤️ <br> Nandan || Punith Kumar || punith || Kishore || Sagar || Yashwanth || Abhilash || Rakesh || Ranjith || Babu || Chethan || Shreekanth || Praveen || Mani ||Mohan
   </footer>
   <script src="language-switcher.js"></script>
  <script>
