--- a/frontend/groupmembers.html
+++ b/frontend/groupmembers.html
@@ -61,29 +61,69 @@
   <div class="gallery">
     <!-- Example Member -->
     <div class="member-card">
-      <img src="assets/images/nandan.jpeg" alt="Member 1">
       <div class="caption">Nandan</div>
     </div>
 
     <div class="member-card">
-      <img src="assets/images/yashwanth.jpeg" alt="Member 2">
+      <div class="caption">Punith Kumar</div>
+    </div>
+
+    <div class="member-card">
+      <div class="caption">Punith</div>
+    </div>
+
+    <div class="member-card">
+      <div class="caption">sagar</div>
+    </div>
+
+    <div class="member-card">
       <div class="caption">Yashwanth</div>
     </div>
 
     <div class="member-card">
-      <img src="assets/images/kishore.jpeg" alt="Member 3">
       <div class="caption">Kishore</div>
     </div>
 
     <div class="member-card">
-      <img src="assets/images/abhi.jpeg" alt="Member 3">
-      <div class="caption">Abhi</div>
+      <div class="caption">Abhilash</div>
     </div>
 
     <div class="member-card">
-      <img src="assets/images/krishna.jpeg" alt="Member 3">
       <div class="caption">krishna</div>
     </div>
+
+    <div class="member-card">
+      <div class="caption">Rakesh</div>
+    </div>
+
+    <div class="member-card">
+      <div class="caption">Ranjith</div>
+    </div>
+
+    <div class="member-card">
+      <div class="caption">Babu</div>
+    </div>
+
+    <div class="member-card">
+      <div class="caption">Chethan</div>
+    </div>
+
+    <div class="member-card">
+      <div class="caption">Shreekanth</div>
+    </div>
+
+    <div class="member-card">
+      <div class="caption">Praveen</div>
+    </div>
+
+    <div class="member-card">
+      <div class="caption">Mani</div>
+    </div>
+
+    <div class="member-card">
+      <div class="caption">Mohan</div>
+    </div>
+
 
     <!-- Add more members like above -->
   </div>
