--- a/frontend/expenses.html
+++ b/frontend/expenses.html
@@ -89,8 +89,8 @@
     const token = localStorage.getItem("token");
 
     if (!token) {
-      alert("Please login first.");
-      window.location.href = "login.html";
+      // alert("Please login first.");
+      window.location.href = "expenses.html";
     } else {
       fetch("https://ganesha-backend.onrender.com/api/expense/all", {
         headers: {
