--- a/frontend/sponsers.html
+++ b/frontend/sponsers.html
@@ -100,17 +100,27 @@
       <!-- Example Sponsor -->
       <div class="sponsor-card">
         <!-- <img src="assets/images/sponsor1.png" alt="Sponsor 1"> -->
-        <h3>ABC Traders</h3>
+        <h3>KrishnaKumar</h3>
       </div>
 
       <div class="sponsor-card">
         <!-- <img src="assets/images/sponsor2.png" alt="Sponsor 2"> -->
-        <h3>XYZ Enterprises</h3>
+        <h3>Ranjith</h3>
       </div>
 
       <div class="sponsor-card">
         <!-- <img src="assets/images/sponsor3.png" alt="Sponsor 3"> -->
-        <h3>Kumbar Bedi Street Devotees</h3>
+        <h3>Anjinappa</h3>
+      </div>
+
+      <div class="sponsor-card">
+        <!-- <img src="assets/images/sponsor3.png" alt="Sponsor 3"> -->
+        <h3>Cycle Race Ravi</h3>
+      </div>
+
+      <div class="sponsor-card">
+        <!-- <img src="assets/images/sponsor3.png" alt="Sponsor 3"> -->
+        <h3>Ravi</h3>
       </div>
 
     </div>
